6report/5funxy/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI

   3  expr : LET var EQ expr IN expr
   4       | IF expr THEN expr ELSE expr
   5       | FUN lvar ARROW expr
   6       | arith_expr EQ arith_expr
   7       | arith_expr LT arith_expr
   8       | arith_expr

   9  arith_expr : arith_expr PLUS factor_expr
  10             | arith_expr MINUS factor_expr
  11             | factor_expr

  12  factor_expr : factor_expr TIMES app_expr
  13              | factor_expr DIV app_expr
  14              | app_expr

  15  app_expr : app_expr lexpr
  16           | atomic_expr

  17  lexpr : atomic_expr
  18        | atomic_expr lexpr

  19  atomic_expr : INT
  20              | BOOL
  21              | ID
  22              | LPAR expr RPAR

  23  lvar : ID
  24       | ID lvar

  25  var : ID

  26  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (26)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	toplevel  goto 10
	expr  goto 11
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (19)

	.  reduce 19


state 4
	atomic_expr : BOOL .  (20)

	.  reduce 20


state 5
	atomic_expr : ID .  (21)

	.  reduce 21


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 16
	.  error

	var  goto 17


state 7
	expr : IF . expr THEN expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 19
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 8
	atomic_expr : LPAR . expr RPAR  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 20
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 9
	expr : FUN . lvar ARROW expr  (5)

	ID  shift 21
	.  error

	lvar  goto 22


state 10
	%entry% : '\001' toplevel .  (26)

	.  reduce 26


state 11
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 23
	.  error


state 12
	expr : arith_expr . EQ arith_expr  (6)
	expr : arith_expr . LT arith_expr  (7)
	expr : arith_expr .  (8)
	arith_expr : arith_expr . PLUS factor_expr  (9)
	arith_expr : arith_expr . MINUS factor_expr  (10)

	PLUS  shift 24
	MINUS  shift 25
	EQ  shift 26
	LT  shift 27
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	SEMISEMI  reduce 8


state 13
	arith_expr : factor_expr .  (11)
	factor_expr : factor_expr . TIMES app_expr  (12)
	factor_expr : factor_expr . DIV app_expr  (13)

	TIMES  shift 28
	DIV  shift 29
	IN  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQ  reduce 11
	LT  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11


state 14
	factor_expr : app_expr .  (14)
	app_expr : app_expr . lexpr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 14
	PLUS  reduce 14
	TIMES  reduce 14
	MINUS  reduce 14
	DIV  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14

	lexpr  goto 30
	atomic_expr  goto 31


state 15
	app_expr : atomic_expr .  (16)

	.  reduce 16


state 16
	var : ID .  (25)

	.  reduce 25


state 17
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 32
	.  error


state 18
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 16
	.  error

	var  goto 33


state 19
	expr : IF expr . THEN expr ELSE expr  (4)

	THEN  shift 34
	.  error


state 20
	atomic_expr : LPAR expr . RPAR  (22)

	RPAR  shift 35
	.  error


state 21
	lvar : ID .  (23)
	lvar : ID . lvar  (24)

	ID  shift 21
	ARROW  reduce 23

	lvar  goto 36


state 22
	expr : FUN lvar . ARROW expr  (5)

	ARROW  shift 37
	.  error


state 23
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 24
	arith_expr : arith_expr PLUS . factor_expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 38
	app_expr  goto 14
	atomic_expr  goto 15


state 25
	arith_expr : arith_expr MINUS . factor_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 39
	app_expr  goto 14
	atomic_expr  goto 15


state 26
	expr : arith_expr EQ . arith_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 40
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 27
	expr : arith_expr LT . arith_expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 41
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 28
	factor_expr : factor_expr TIMES . app_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 42
	atomic_expr  goto 15


state 29
	factor_expr : factor_expr DIV . app_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 43
	atomic_expr  goto 15


state 30
	app_expr : app_expr lexpr .  (15)

	.  reduce 15


31: shift/reduce conflict (shift 3, reduce 17) on INT
31: shift/reduce conflict (shift 4, reduce 17) on BOOL
31: shift/reduce conflict (shift 5, reduce 17) on ID
31: shift/reduce conflict (shift 8, reduce 17) on LPAR
state 31
	lexpr : atomic_expr .  (17)
	lexpr : atomic_expr . lexpr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 17
	PLUS  reduce 17
	TIMES  reduce 17
	MINUS  reduce 17
	DIV  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	SEMISEMI  reduce 17

	lexpr  goto 44
	atomic_expr  goto 31


state 32
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 45
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 33
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 46
	.  error


state 34
	expr : IF expr THEN . expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 47
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 35
	atomic_expr : LPAR expr RPAR .  (22)

	.  reduce 22


state 36
	lvar : ID lvar .  (24)

	.  reduce 24


state 37
	expr : FUN lvar ARROW . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 48
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 38
	arith_expr : arith_expr PLUS factor_expr .  (9)
	factor_expr : factor_expr . TIMES app_expr  (12)
	factor_expr : factor_expr . DIV app_expr  (13)

	TIMES  shift 28
	DIV  shift 29
	IN  reduce 9
	PLUS  reduce 9
	MINUS  reduce 9
	EQ  reduce 9
	LT  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	SEMISEMI  reduce 9


state 39
	arith_expr : arith_expr MINUS factor_expr .  (10)
	factor_expr : factor_expr . TIMES app_expr  (12)
	factor_expr : factor_expr . DIV app_expr  (13)

	TIMES  shift 28
	DIV  shift 29
	IN  reduce 10
	PLUS  reduce 10
	MINUS  reduce 10
	EQ  reduce 10
	LT  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10


state 40
	expr : arith_expr EQ arith_expr .  (6)
	arith_expr : arith_expr . PLUS factor_expr  (9)
	arith_expr : arith_expr . MINUS factor_expr  (10)

	PLUS  shift 24
	MINUS  shift 25
	IN  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	SEMISEMI  reduce 6


state 41
	expr : arith_expr LT arith_expr .  (7)
	arith_expr : arith_expr . PLUS factor_expr  (9)
	arith_expr : arith_expr . MINUS factor_expr  (10)

	PLUS  shift 24
	MINUS  shift 25
	IN  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	SEMISEMI  reduce 7


state 42
	factor_expr : factor_expr TIMES app_expr .  (12)
	app_expr : app_expr . lexpr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 12
	PLUS  reduce 12
	TIMES  reduce 12
	MINUS  reduce 12
	DIV  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12

	lexpr  goto 30
	atomic_expr  goto 31


state 43
	factor_expr : factor_expr DIV app_expr .  (13)
	app_expr : app_expr . lexpr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 13
	PLUS  reduce 13
	TIMES  reduce 13
	MINUS  reduce 13
	DIV  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13

	lexpr  goto 30
	atomic_expr  goto 31


state 44
	lexpr : atomic_expr lexpr .  (18)

	.  reduce 18


state 45
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 49
	SEMISEMI  shift 50
	.  error


state 46
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 51
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 47
	expr : IF expr THEN expr . ELSE expr  (4)

	ELSE  shift 52
	.  error


state 48
	expr : FUN lvar ARROW expr .  (5)

	.  reduce 5


state 49
	expr : LET var EQ expr IN . expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 53
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 50
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 51
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 49
	.  error


state 52
	expr : IF expr THEN expr ELSE . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 54
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 53
	expr : LET var EQ expr IN expr .  (3)

	.  reduce 3


state 54
	expr : IF expr THEN expr ELSE expr .  (4)

	.  reduce 4


State 31 contains 4 shift/reduce conflicts.


22 terminals, 11 nonterminals
27 grammar rules, 55 states
